# markdown-link-prefix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot-auto-merge.yml  pages.yml  publish-pypi.yml
docs/: configuration.md  demo.md  index.md  installation.md  license.md  link_prefixes.yaml  troubleshooting.md  usage.md
markdown_link_prefix/: __init__.py  extension.py
tests/: test_link_prefix.py
